--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,10 +1,10 @@
+@use "mixins" as m;
+
 * {
   padding: 0px;
   margin: 0px;
 }
-body {
-  overflow: hidden;
-}
+
 .header {
   position: absolute;
   top: 0;
@@ -12,15 +12,15 @@ body {
   left: 0;
   background-color: #4a5240;
   color: white;
-  max-height: 8vh;
-  min-height: 8vh;
   max-width: 100vw;
 
   &__nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 8vh;
+    min-height: 60px;
+    max-height: 60px;
+
     overflow: hidden;
   }
   &__list {
@@ -87,24 +87,22 @@ body {
     height: 100vh;
     background-color: #f4f3ee;
     width: 400px;
-    transform: translateX(100%);
     transition: transform 0.5s ease-in;
-    // display: none;
+    display: none;
     overflow: hidden;
   }
   &__shop.active {
-    // display: flex;
+    display: flex;
     transform: translateX(0%);
-
     transition: transform 0.5s ease-in;
   }
   &__shopheading {
     display: flex;
     justify-content: space-between;
     position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
+    top: 10;
+    right: 10;
+    left: 10;
     font-size: 20px;
     align-items: center;
     padding: 10px;
