--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -83,7 +83,7 @@
   &__shop {
     position: absolute;
     right: 0;
-    top: 8vh;
+    top: 0;
     height: 100vh;
     background-color: #f4f3ee;
     width: 400px;
@@ -121,11 +121,11 @@
     &__list {
       position: absolute;
       left: 0;
-      height: 80vh;
-      top: 7vh;
+      height: 40vh;
+      top: 6vh;
       background-color: #4a5240;
       flex-direction: column;
-      width: 50vw;
+      width: 100vw;
       align-items: center;
       justify-content: center;
       transform: translateX(-100%);
