--- a/src/scss/_shop.scss
+++ b/src/scss/_shop.scss
@@ -60,15 +60,26 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  width: 200px;
+  width: 220px;
+
   &__image {
-    height: 200px;
+    
   }
+
   &__button {
     border: none;
     background-color: #4a5240;
     color: white;
     padding: 10px;
+    margin-top: 5px;
+    font-family: 'DM Sans';
+    font-size: 16px;
   }
+
+  &__h5, h6 {
+    padding: 5px 0;
+    font-family: 'DM Sans';
+    font-size: 12px;
+  }
+
 }
