--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -20,8 +20,8 @@
     align-items: center;
     min-height: 60px;
     max-height: 60px;
-
-    overflow: hidden;
+    max-width: 1400px;
+    margin: auto;
   }
   &__list {
     list-style: none;
@@ -30,7 +30,7 @@
     width: 35%;
     letter-spacing: 2px;
     text-transform: uppercase;
-    margin-left: 25px;
+    margin-left: auto;
     li {
       cursor: pointer;
       margin-left: 15px;
@@ -75,7 +75,7 @@
     width: 35%;
     justify-content: flex-end;
     padding: 10px;
-    margin-right: 40px;
+    margin-right: auto;
     i {
       cursor: pointer;
     }
@@ -122,14 +122,13 @@
       position: absolute;
       left: 0;
       height: 40vh;
-      top: 6vh;
+      top: 50px;
       background-color: #4a5240;
       flex-direction: column;
       width: 100vw;
       align-items: center;
       justify-content: center;
       transform: translateX(-100%);
-      margin-left: 0;
       transition: transform 0.5s ease-in;
       li {
         margin: 10 0 0 10;
