--- a/src/scss/_shop.scss
+++ b/src/scss/_shop.scss
@@ -48,6 +48,7 @@
     border: 1px solid red;
     height: 150px;
     width: 100%;
+    margin-top: 6%;
   }
   &__innercontainer {
     border: 1px solid pink;
