--- a/src/scss/_shop.scss
+++ b/src/scss/_shop.scss
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
+    align-items: baseline;
   }
   &__menu__heading {
     font-size: 25px;
