--- a/src/scss/_shop.scss
+++ b/src/scss/_shop.scss
@@ -1,3 +1,5 @@
+@use "mixins" as m;
+
 .main {
   max-width: 1400px;
   height: 100vh;
@@ -54,14 +56,19 @@
     border: 1px solid pink;
     display: flex;
     flex-wrap: wrap;
-    gap: 50;
+    justify-content: space-evenly;
   }
 }
 
 .card {
   display: flex;
   flex-direction: column;
-  width: 220px;
+  width: 150px;
+  margin: 20px 0;
+
+  @include m.desktop {
+    width: 220px;
+}
 
   &__image {
     
