--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -12,30 +12,29 @@
   left: 0;
   background-color: #4a5240;
   color: white;
-  max-width: 100vw;
+  max-width: 1000vw;
 
   &__nav {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     min-height: 60px;
     max-height: 60px;
-    max-width: 1400px;
+    max-width: 1000px;
     margin: auto;
+    justify-content: space-between;
   }
   &__list {
+    margin-left: 0;
     list-style: none;
     display: flex;
-    padding: 10px;
     width: 35%;
     letter-spacing: 2px;
     text-transform: uppercase;
-    margin-left: auto;
     li {
       cursor: pointer;
-      margin-left: 15px;
+      margin-right: 15px;
       position: relative;
-      padding: 15 0;
+      padding: 15 5;
     }
   }
 
@@ -75,7 +74,7 @@
     width: 35%;
     justify-content: flex-end;
     padding: 10px;
-    margin-right: auto;
+    margin-right: 0;
     i {
       cursor: pointer;
     }
@@ -89,7 +88,11 @@
     width: 400px;
     transition: transform 0.5s ease-in;
     display: none;
-    overflow: hidden;
+  }
+  &__shop.active {
+    display: flex;
+    // transform: translateX(0%);
+    transition: transform 0.5s ease-in;
   }
   &__shopcontainer {
     margin-top: 90px;
@@ -98,6 +101,7 @@
     width: 100%;
     align-items: center;
     max-height: 72%;
+    overflow: auto;
   }
   &__shop__card {
     height: 100px;
@@ -106,6 +110,7 @@
     color: black;
     align-items: center;
     width: 80%;
+    margin-bottom: 10px;
   }
   &__shop__image {
     height: 50px;
@@ -132,11 +137,7 @@
     background-color: #4a5240;
     color: white;
   }
-  &__shop.active {
-    display: flex;
-    transform: translateX(0%);
-    transition: transform 0.5s ease-in;
-  }
+
   &__shopheading {
     display: flex;
     justify-content: space-between;
@@ -178,7 +179,6 @@
 
     &__burger {
       display: block;
-      margin-left: 35px;
       width: 35%;
       cursor: pointer;
     }
