--- a/src/scss/_shop.scss
+++ b/src/scss/_shop.scss
@@ -1,18 +1,19 @@
 .main {
-  max-width: 1400px;
+  max-width: 1000px;
   height: 100vh;
   display: grid;
   grid-template-columns: 25% 75%;
-  justify-content: center;
+  justify-content: baseline;
+  border: 1px solid pink;
   margin: auto;
   &__menu {
-    margin-top: 60px;
-    border: 1px solid blue;
-    height: 90vh;
+    margin-top: 120px;
+    border-right: 1px solid grey;
+    height: 80vh;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
-    align-items: baseline;
+    align-items: flex-start;
   }
   &__menu__heading {
     font-size: 25px;
@@ -26,7 +27,7 @@
   }
   &__products {
     margin-top: 60px;
-    border: 1px solid red;
+    border: 1px solid blue;
     height: 90vh;
     display: flex;
     flex-direction: column;
@@ -47,7 +48,7 @@
   }
   &__innercontainer {
     border: 1px solid pink;
-    height: 76%;
+    height: 70%;
     width: 100%;
   }
 }
