--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -35,6 +35,10 @@
       margin-right: 15px;
       position: relative;
       padding: 15 5;
+      a {
+        color: white;
+        text-decoration: none;
+      }
     }
   }
 
