--- a/src/scss/_shop.scss
+++ b/src/scss/_shop.scss
@@ -21,12 +21,16 @@
     margin-bottom: 7px;
     font-size: 25px;
     cursor: pointer;
+    text-decoration: none;
+    color: black;
   }
   &__menu__item {
     font-weight: 400;
     font-size: 18px;
     margin-bottom: 4px;
     cursor: pointer;
+    text-decoration: none;
+    color: black;
   }
   &__products {
     margin-top: 60px;
