--- a/src/scss/_shop.scss
+++ b/src/scss/_shop.scss
@@ -66,13 +66,14 @@
 }
 
 .card {
+  &__link {
   display: flex;
   flex-direction: column;
   margin: 20px 0;
   @include m.desktop {
     width: 220px;
   }
-
+}
   &__image {
     &:hover {
       opacity: 70%;
@@ -105,15 +106,24 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+.modal {
+  top: 50%;
+  left: 50%;
+  width: 600px;
+  height: 900px;
+  margin-left: -300px;
+  margin-top: -450px;
+  border: 0;
   .productDisplay {
-    height: 40%;
-    width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px;
     &__image {
-      width: 100%;
+      width: 70%;
     }
     &__name {
       font-size: xx-large;
@@ -128,7 +138,14 @@
       font-size: x-large;
     }
     &__button {
-      width: 100px;
+      border: none;
+      background-color: #4a5240;
+      color: white;
+      padding: 10px;
+      margin-top: 5px;
+      font-family: "DM Sans";
+      font-size: 16px;
+      cursor: pointer;
     }
   }
 }
