Added styling to cart counter

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -82,6 +82,16 @@
     i {
       cursor: pointer;
     }
+
+    &__counter {
+      position: absolute;
+      color: white;
+      background-color: rgb(131, 131, 131);
+      padding: 0 6px;
+      border-radius: 50%;
+      transform: translate(50%, -30%);
+      font-size: 14px;
+    }
   }
   &__shop {
     position: absolute;
