Changed background-color to cart counter

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -133,7 +133,7 @@
     &__counter {
       position: absolute;
       color: white;
-      background-color: rgb(131, 131, 131);
+      background-color: red;
       padding: 0 6px;
       border-radius: 50%;
       transform: translate(50%, -30%);
