--- a/src/scss/_shop.scss
+++ b/src/scss/_shop.scss
@@ -18,6 +18,7 @@ a {
     margin: auto;
   }
   &__menu {
+    margin: 0;
     display: none;
     @include m.desktop {
       margin-top: 120px;
@@ -29,20 +30,37 @@ a {
       align-items: flex-start;
     }
   }
+  &__menu.active {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    width: 100vw;
+    align-items: center;
+    background-color: #4a5240;
+    margin-top: 60px;
+    padding: 20 0 20 0;
+  }
   &__menu__heading {
-    margin-bottom: 7px;
+    color: white;
     font-size: 25px;
-    cursor: pointer;
+    margin-bottom: 7px;
     text-decoration: none;
-    color: black;
+    cursor: pointer;
+    @include m.desktop {
+      color: #23262f;
+    }
   }
   &__menu__item {
-    font-weight: 400;
+    color: white;
     font-size: 18px;
-    margin-bottom: 4px;
+    font-weight: 400;
     cursor: pointer;
+    margin-bottom: 4px;
     text-decoration: none;
-    color: black;
+
+    @include m.desktop {
+      color: #23262f;
+    }
   }
   &__products {
     margin-top: 60px;
@@ -61,22 +79,31 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // border: 1px solid red;
-    height: 150px;
+    height: 60px;
     width: 100%;
-    margin-top: 6%;
+    border: 1px solid grey;
+    margin-bottom: 2px;
+    @include m.desktop {
+      display: none;
+    }
   }
   &__innercontainer {
     // border: 1px solid pink;
     display: grid;
     gap: 10;
-    margin-top: 80px;
     grid-template-columns: 1fr 1fr;
 
     @include m.desktop {
+      margin-top: 100px;
       grid-template-columns: 1fr 1fr 1fr;
       overflow: auto;
       gap: 20;
+    }
+  }
+  &__heading {
+    cursor: pointer;
+    @include m.desktop {
+      display: none;
     }
   }
 }
