--- a/src/scss/_checkout.scss
+++ b/src/scss/_checkout.scss
@@ -1,18 +1,63 @@
 .checkout {
-    max-width: 1024px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 60% 40%;
+  max-width: 1024px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 60% 40%;
 
-
-    &__formcontainer {
-        height: 100vh;
-
-
+  &__formcontainer {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    input {
+      background-color: rgb(209, 209, 209);
+      border: 0.5px solid rgb(175, 175, 175);
+      border-radius: 50px;
+      text-align: center;
+      height: 20px;
     }
+  }
+  &__formcontainer__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid magenta;
+    width: 90%;
+  }
+  &__form__name {
+    width: 100%;
+  }
+  &__form__surname {
+    width: 100%;
+  }
+  &__form__adress {
+    width: 100%;
+  }
+  &__form__postcode {
+    width: 45%;
+  }
+  &__form__city {
+    width: 45%;
+  }
+  &__form__phone {
+  }
+  &__form__email {
+  }
+  &__form__namecontainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  &__form__citycontainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 
-    &__cartcontainer {
-        background-color: gray;
-        height: 100vh;
-    }
+  &__cartcontainer {
+    background-color: gray;
+    height: 100vh;
+  }
 }
