--- a/src/scss/_faq.scss
+++ b/src/scss/_faq.scss
@@ -15,6 +15,9 @@
         width: 90%;
         gap: 10px;
         border: 1px solid gray;
+        .faq__questionLine {
+            cursor: pointer;
+        }
         @include m.desktop {
             width: 40%;
         }
