--- a/src/scss/_checkout.scss
+++ b/src/scss/_checkout.scss
@@ -1,3 +1,5 @@
+@use "mixins" as m;
+
 .checkout {
     max-width: 1024px;
     margin: auto;
@@ -12,7 +14,18 @@
     }
 
     &__cartcontainer {
-        background-color: gray;
-        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #f4f3ee;
+        height: 90vh;
+        margin-top: 60px;
+        padding-top: 20px;
+    }
+
+    &__total {
+        margin-top: 40px;
+        font-weight: bolder;
+        font-size: 18px;
     }
 }
