Added more styling

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -242,10 +242,11 @@
 
  button {
   border: none;
-  font-size: 14px;
+  font-size: 12px;
   background-color: m.$green;
   color: white;
-  padding: 3px 5px;
+  padding: 4px 6px;
+  border-radius: 50%;
  }
 }
 
