--- a/src/scss/_faq.scss
+++ b/src/scss/_faq.scss
@@ -1,28 +1,35 @@
 @use "mixins" as m;
+
 .faq {
     display: flex;
     flex-direction: column;
-    justify-items: baseline;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100%;
+    margin: 0;
+    gap: 10px;
     &__container {
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
-        width: 90%;
-        gap: 10px;
-        border: 1px solid gray;
-        .faq__questionLine {
-            cursor: pointer;
-        }
+        margin: 0 10px 0 10px;
         @include m.desktop {
             width: 40%;
         }
+        .faq__questionLine {
+            display: flex;
+            justify-content: center;
+            cursor: pointer;
+            text-decoration: underline;
+            width: 100%;
+            i {
+                margin-left: 5px;
+            }
+        }
         .faq__answerLine {
             display: none;
+            width: 80%;
         }
         .visible {
             display: block;
@@ -36,5 +43,5 @@ p {
 
 h2 {
     font-size: xx-large;
-    margin-bottom: 50px;
+    top: 200px;
 }
