--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -62,6 +62,7 @@
   }
   &__submitbutton {
     border: none;
+    cursor: pointer;
     background: m.$green;
     color: white;
     padding: 20 40 20 40px;
