--- a/src/scss/_checkout.scss
+++ b/src/scss/_checkout.scss
@@ -1,22 +1,5 @@
 @use "mixins" as m;
 
-.checkoutbody {
-  &::after {
-    content: "";
-    height: 100vh;
-    background-image: url(../images/the-ordinary.jpeg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    opacity: 0.4;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
-  }
-}
 .checkout {
   max-width: 1024px;
   margin: auto;
@@ -47,7 +30,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid magenta;
     width: 90%;
   }
 
@@ -67,6 +49,17 @@
     justify-content: center;
     @include m.desktop {
       flex-direction: row;
+    }
+  }
+  &__form__button {
+    padding: 15 10 15 10;
+    background-color: m.$green;
+    color: white;
+    cursor: pointer;
+    border: none;
+    border-radius: 25px;
+    @include m.desktop {
+      padding: 25 40 25 40;
     }
   }
 
