--- a/src/scss/_checkout.scss
+++ b/src/scss/_checkout.scss
@@ -1,5 +1,7 @@
 @use "mixins" as m;
 
+
+
 .checkout {
     max-width: 1024px;
     margin: auto;
@@ -17,41 +19,104 @@
 
 
     }
+}
 
-    &__cartcontainer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 50vh;
-        background-color: #f4f3ee;
-        margin-top: 60px;
-        padding-top: 10px;
+h4 {
+    font-size: 16px;
+    margin-top: 60px;
+    padding: 10px 0;
 
-        @include m.desktop {
-            height: 90vh;
-        }
+    @include m.desktop {
+        display: none;
     }
+}
+
+.titlecontainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 
     &__title {
         border-bottom: 1px solid gray;
-        width: 80%;
+        width: 100%;
         padding-bottom: 10px;
         margin: 20px 0;
         font-size: 20px;
     }
+}
 
-    &__name {
-        width: 35%;
+.cartcontainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        background-color: #f4f3ee;
+        border: 1px solid gray;
+        
+
+        @include m.desktop {
+            height: 90vh;
+            margin-top: 60px;
+        }
+}    
+
+.innercartcontainer {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    display: none;
+
+    @include m.desktop {
+        display: flex;
     }
 
-    &__price {
-        width: 20%;
+&.active {
+    display: flex;
+}   
+
+    &__prodcard {
+        height: 100px;
+        display: flex;
+        justify-content: space-between;
+        color: black;
+        align-items: center;
+        width: 100%;
+
+        &__image {
+            height: 50px;
+        }
+
+        &__name {
+            width: 35%;
+        }
+
+        &__price {
+            width: 20%;
+        }
     }
 
     &__total {
-        margin: 40px 0;
+        margin: 20px 0;
         font-weight: bolder;
         font-size: 18px;
     }
+
+    &__btncontainer {
+        display: flex;
+        width: 20%;
+        justify-content: space-between;
+
+        button {
+            border: none;
+            font-size: 12px;
+            background-color: m.$green;
+            color: white;
+            padding: 4px 6px;
+            border-radius: 50%;
+           }
+    }
 }
+
+
 
