--- a/src/scss/_faq.scss
+++ b/src/scss/_faq.scss
@@ -5,40 +5,38 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     width: 100%;
-    margin: 0;
+    margin-top: 200px;
     gap: 10px;
     &__container {
         display: flex;
         flex-direction: column;
-        align-items: center;
         margin: 0 10px 0 10px;
+        border-bottom: 1px solid black;
+        text-align: left;
+        width: 90%;
         @include m.desktop {
             width: 40%;
         }
         .faq__questionLine {
             display: flex;
-            justify-content: center;
             cursor: pointer;
-            text-decoration: underline;
             width: 100%;
+            font-weight: bold;
+            margin-bottom: 10px;
             i {
-                margin-left: 5px;
+                margin-left: auto;
             }
         }
         .faq__answerLine {
             display: none;
-            width: 80%;
+            width: 100%;
         }
         .visible {
             display: block;
+            margin-bottom: 10px;
         }
     }
-}
-
-p {
-    font-size: x-large;
 }
 
 h2 {
