--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -1,7 +1,9 @@
 @use "mixins" as m;
 .contactmain {
+  * {
+    transition: all 0.2s linear;
+  }
   max-width: 1024px;
-  height: 93vh;
   margin: auto;
   margin-top: 60px;
   display: flex;
@@ -25,35 +27,41 @@
   flex-direction: column;
   align-items: center;
   input {
-    border: 0.2px solid lightgrey;
+    border: 1px solid #ccc;
+    padding: 10px 15px;
     margin: 0 0 2 0;
+    border-radius: 10px;
+    width: 100%;
     @include m.desktop {
       margin: 0 0 10 0;
+      width: 50%;
+    }
+    input:focus {
+      border: 1px solid #000;
     }
   }
-  &__name {
-    text-align: center;
-    width: 250px;
-    border-radius: 10px;
-    height: 25px;
-    @include m.desktop {
-      width: 250px;
-      height: 40px;
-    }
-  }
-  &__email {
-    text-align: center;
-    width: 250px;
-    height: 25px;
-    border-radius: 10px;
-    @include m.desktop {
-      width: 250px;
-      height: 40px;
-    }
-  }
+  // // &__name {
+  // //   text-align: center;
+  // //   width: 250px;
+  // //   border-radius: 10px;
+  // //   height: 25px;
+  // //   @include m.desktop {
+  // //     width: 250px;
+  // //     height: 40px;
+  // //   }
+  // // }
+  // // &__email {
+  // //   text-align: center;
+  // //   width: 250px;
+  // //   height: 25px;
+  // //   border-radius: 10px;
+  // //   @include m.desktop {
+  // //     width: 250px;
+  // //     height: 40px;
+  // //   }
+  // }
   &__message {
     text-align: initial;
-    width: 100%;
     height: 70%;
     border-radius: 10px;
     @include m.desktop {
