--- a/src/scss/_checkout.scss
+++ b/src/scss/_checkout.scss
@@ -90,7 +90,6 @@
   font-size: 16px;
   margin-top: 60px;
   padding: 10px 0;
-
   @include m.desktop {
     display: none;
   }
@@ -111,6 +110,7 @@
 }
 
 .cartcontainer {
+  border: 1px solid red;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -120,12 +120,12 @@
 
   @include m.desktop {
     height: 90vh;
-    margin-top: 60px;
   }
 }
 
 .innercartcontainer {
   width: 80%;
+  border: 1px solid red;
   display: flex;
   flex-direction: column;
   align-items: center;
