--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -58,31 +58,68 @@
     }
 }
 
-.collage {
-    height: 65vh;
-    border: 1px solid gray;
+.reviews {
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0;
 
-    &__title {
+    @include m.desktop {
+        flex-direction: row;
+        height: 50vh;
+      }
+
+    &__container {
+        width: 80%;
+        height: 50vh;
+        margin: 10px;
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        padding: 20px 0;
-        text-align: center;
-    }
+        align-items: center;
 
-    &__imagecontainer {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-       
+        @include m.desktop {
+            width: 30%;
+            height: 35vh;
+          }
 
-        &__image {
-            border: 1px solid gray;
-            width: 15%;
-            height: 25vh;
-           
-            
+        .fa {
+            color: rgb(218,165,32);
         }
     }
+
+    &__text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+        // border-bottom: 1px solid #ddd ;
+
+        @include m.desktop {
+            border-right: 1px solid #ddd;
+          }
+
+        &__title {
+            font-size: 16px;
+        }
+
+        &__description {
+            text-align: center;
+            padding: 10px;
+            font-size: 16px;
+            line-height: 25px;
+        }
+    }    
 }
+
+.checked {
+    color: rgb(218,165,32);
+}
+
+
 
 
