--- a/src/scss/_checkout.scss
+++ b/src/scss/_checkout.scss
@@ -73,12 +73,17 @@
     display: flex;
     gap: 10px;
     input {
-      width: 70%;
+      width: 50%;
+      @include m.desktop {
+        width: 70%;
+      }
     }
     select {
-      width: 100%;
       padding: 10px 15px;
       font-size: 15px;
+      @include m.desktop {
+        width: 100%;
+      }
     }
     &__inputcontainer {
       margin-top: 5px;
