--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -26,7 +26,7 @@
   &__list {
     position: absolute;
     left: 0;
-    height: 40vh;
+    height: 300px;
     display: flex;
     top: 50px;
     background-color: #4a5240;
