Added more styling

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -43,6 +43,7 @@ footer {
     @include m.desktop {
         flex-direction: row;
         text-align: left;
+        width: 100%;
        
     }
 
